# HonToAnki

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  build.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: release.yml
src/hontoanki/: __main__.py  anki_utils.py  app.py  config.py  dictionary.py  epub_utils.py  styles.py
