[project]
name = "hontoanki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fugashi[unidic-lite]>=1.5.2",
    "genanki>=0.13.1",
    "orjson>=3.11.6",
    "rich>=14.3.2",
]
