[project]
name = "hontoanki"
version = "0.1.0"
description = "Convert Japanese EPUB books to Anki decks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fugashi[unidic-lite]>=1.5.2",
    "genanki>=0.13.1",
    "orjson>=3.11.6",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hontoanki = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
