[project]
name = "hontoanki"
version = "0.2.0"
description = "Convert Japanese EPUB books to Anki decks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fugashi>=1.5.2",
    "genanki>=0.13.1",
    "orjson>=3.11.6",
    "rich>=14.3.2",
    "unidic-lite>=1.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "briefcase>=0.3.0",
]

[project.scripts]
hontoanki = "hontoanki.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.briefcase]
project_name = "HonToAnki"
bundle = "com.hontoanki"
version = "0.2.0"
url = "https://github.com/shaqu/hontoanki"

[tool.briefcase.app.hontoanki]
console_app = true
supported = ["windows", "macos", "linux"]
description = "Convert Japanese EPUB books to Anki decks"
long_description = "A tool that reads Japanese EPUB files, extracts vocabulary using fugashi (MeCab) with UniDic, looks up definitions in JMdict, and generates Anki flashcard decks (.apkg) organized by chapter."
sources = ["src/hontoanki"]
requirement_installer_args = ["--find-links", "./wheels"]

[tool.briefcase.app.hontoanki.macOS]
universal_build = false
